# pedestrian-recognition

./: CMakeLists.txt  LICENSE.txt  Model.dia  README.md  model.txt  readme.txt
src/: CMakeLists.txt  Chi2Kernel.cpp  Chi2Kernel.hpp  Histogram.hpp  IClassifier.hpp  IKernel.hpp  ImageSet.cpp  ImageSet.hpp  LinearSVM.cpp  LinearSVM.hpp  PRgraphicsMode.cpp  PRmain.cpp  PRrecognitionMode.cpp  PRtrainingMode.cpp  PatchPositions.cpp  PatchPositions.hpp  PedestrianRecognition.hpp  Processing.cpp  Processing.hpp  Rectangle.cpp  Rectangle.hpp  Sample.cpp  Sample.hpp  SampleSet.cpp  SampleSet.hpp  Signal2D.cpp  Signal2D.hpp  classify.cpp  classifyingMode.cpp  debug.hpp  graphicsMode.cpp  main.cpp  quality.cpp  runModes.hpp  show.cpp  train.cpp  trainingMode.cpp
